# seqcol

./: Cargo.toml  LICENSE  README.md  TODO.md
data/: README.md
data/colorschemes/: buried_index_aa.tsv  chemistry_aa.tsv  chemistry_nucl.tsv  clustal_aa.tsv  helix_propensity_aa.tsv  hydrophobicity_aa.tsv  jalview_ambiguity_nucl.tsv  jalview_nucl.tsv  letter_aa.tsv  purine_pyrimidine_nucl.tsv  rasmol_aa.tsv  shapely_aa.tsv  shapely_nucl.tsv  strand_propensity_aa.tsv  taylor_aa.tsv  taylor_nucl.tsv  turn_propensity_aa.tsv  zappo_aa.tsv  zappo_nucl.tsv
src/: ansi_colors.rs  bio.rs  colorschemes.rs  inout.rs  main.rs
tests/: RUNME.sh  expected.sh
tests/data/: aln_picorna.fa1  custom.csv  custom.fa  ebola_virus_reduced_align.fa  ebola_virus_reduced_align.fa1
tests/expected/: custom_colorscheme.txt  foreground_consensus.txt
