[package]
name = "seqcol"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_colours = "1.2.3"
anstyle-query = "1.1.3"
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
include_dir = "0.7.4"
phf = { version = "0.12.1", features = ["macros"] }
regex = "1.11.1"
termbg = "0.6.2"
terminal-colorsaurus = "0.4.8"
yansi = "1.0.1"
