[package]
name = "seqcol"
version = "0.1.0"
edition = "2024"

[dependencies]
ansi_colours = "1.2.3"
anstyle-query = "1.1.4"
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive", "wrap_help", "env"] }
include_dir = "0.7.4"
phf = { version = "0.13.1", features = ["macros"] }
regex = "1.12.2"
termbg = "0.6.2"
terminal-colorsaurus = "1.0.1"
yansi = "1.0.1"
